localStrorage를 이용한 최근 본 상품 기능 추가 (쿠키 삭제 시 에러 발생하는 문제로 수정 해야 함)

--- a/react/shop/src/App.css
+++ b/react/shop/src/App.css
@@ -46,7 +46,15 @@
   transition: opacity 0.5s;
 }
 
-
+.recently-item-list {
+  position: absolute;
+  top: 50px;
+  right: 0;
+  background-color: #fff;
+  border: 1px solid #eee;
+  padding: 10px;
+  max-width: 200px;
+}
 
 
 @keyframes App-logo-spin {
