--- a/interactive-web/apple-clone/study/css/main.css
+++ b/interactive-web/apple-clone/study/css/main.css
@@ -81,6 +81,7 @@ a {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	top: 35vh;
 	margin: 5px 0;
 	height: 3em;
 	font-size: 2.5rem;
@@ -118,7 +119,7 @@ a {
 	color: rgb(29, 29, 31);
 }
 
-.desc-message {
+.sticky-elem.desc-message {
 	width: 50%;
 	font-weight: bold;
 }
@@ -161,7 +162,6 @@ a {
 .sticky-elem {
 	display: none;
 	position: fixed;
-	top: 0;
 	left: 0;
 	width: 100%;
 }
