css 포지션값 수정

--- a/interactive-web/apple-clone/study/css/main.css
+++ b/interactive-web/apple-clone/study/css/main.css
@@ -185,6 +185,11 @@ a {
 }
 
 .sticky-elem-canvas {
+	top: 0;
+	height: 100%;
+}
+.sticky-elem-canvas canvas {
+	position: absolute;
 	top: 50%;
 	left: 50%;
 }
