--- a/interactive-web/apple-clone/study/css/main.css
+++ b/interactive-web/apple-clone/study/css/main.css
@@ -198,6 +198,16 @@ a {
 	left: 50%;
 }
 
+#scroll-section-3 {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.image-blend-canvas {
+	background-color: rgb(209, 207, 255);
+}
+
 
 @media (min-width: 1024px) {
 	#scroll-section-0 h1 {
